--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -425,3 +425,191 @@ footer p {
 		-moz-transform: translate3d(10px, 10px, 0);
 	}
 }
+
+#escapingBallG{
+	position:relative;
+	width:96px;
+	height:33px;
+	margin:auto;
+}
+
+.escapingBallG{
+	background-color:rgb(230,154,230);
+	position:absolute;
+	top:0;
+	left:0;
+	width:33px;
+	height:33px;
+	border-radius:16px;
+		-o-border-radius:16px;
+		-ms-border-radius:16px;
+		-webkit-border-radius:16px;
+		-moz-border-radius:16px;
+	animation-name:bounce_escapingBallG;
+		-o-animation-name:bounce_escapingBallG;
+		-ms-animation-name:bounce_escapingBallG;
+		-webkit-animation-name:bounce_escapingBallG;
+		-moz-animation-name:bounce_escapingBallG;
+	animation-duration:1.5s;
+		-o-animation-duration:1.5s;
+		-ms-animation-duration:1.5s;
+		-webkit-animation-duration:1.5s;
+		-moz-animation-duration:1.5s;
+	animation-iteration-count:infinite;
+		-o-animation-iteration-count:infinite;
+		-ms-animation-iteration-count:infinite;
+		-webkit-animation-iteration-count:infinite;
+		-moz-animation-iteration-count:infinite;
+	animation-timing-function:linear;
+		-o-animation-timing-function:linear;
+		-ms-animation-timing-function:linear;
+		-webkit-animation-timing-function:linear;
+		-moz-animation-timing-function:linear;
+	animation-delay:0s;
+		-o-animation-delay:0s;
+		-ms-animation-delay:0s;
+		-webkit-animation-delay:0s;
+		-moz-animation-delay:0s;
+	transform:scale(0.5, 1);
+		-o-transform:scale(0.5, 1);
+		-ms-transform:scale(0.5, 1);
+		-webkit-transform:scale(0.5, 1);
+		-moz-transform:scale(0.5, 1);
+}
+
+
+
+@keyframes bounce_escapingBallG{
+	0%{
+		left:0px;
+		transform:scale(0.5, 1);
+	}
+
+	25%{
+		left:31px;
+		transform:scale(1, 0.5);
+	}
+
+	50%{
+		left:79px;
+		transform:scale(0.5, 1);
+	}
+
+	75%{
+		left:31px;
+		transform:scale(1, 0.5);
+	}
+
+	100%{
+		left:0px;
+		transform:scale(0.5, 1);
+	}
+}
+
+@-o-keyframes bounce_escapingBallG{
+	0%{
+		left:0px;
+		-o-transform:scale(0.5, 1);
+	}
+
+	25%{
+		left:31px;
+		-o-transform:scale(1, 0.5);
+	}
+
+	50%{
+		left:79px;
+		-o-transform:scale(0.5, 1);
+	}
+
+	75%{
+		left:31px;
+		-o-transform:scale(1, 0.5);
+	}
+
+	100%{
+		left:0px;
+		-o-transform:scale(0.5, 1);
+	}
+}
+
+@-ms-keyframes bounce_escapingBallG{
+	0%{
+		left:0px;
+		-ms-transform:scale(0.5, 1);
+	}
+
+	25%{
+		left:31px;
+		-ms-transform:scale(1, 0.5);
+	}
+
+	50%{
+		left:79px;
+		-ms-transform:scale(0.5, 1);
+	}
+
+	75%{
+		left:31px;
+		-ms-transform:scale(1, 0.5);
+	}
+
+	100%{
+		left:0px;
+		-ms-transform:scale(0.5, 1);
+	}
+}
+
+@-webkit-keyframes bounce_escapingBallG{
+	0%{
+		left:0px;
+		-webkit-transform:scale(0.5, 1);
+	}
+
+	25%{
+		left:31px;
+		-webkit-transform:scale(1, 0.5);
+	}
+
+	50%{
+		left:79px;
+		-webkit-transform:scale(0.5, 1);
+	}
+
+	75%{
+		left:31px;
+		-webkit-transform:scale(1, 0.5);
+	}
+
+	100%{
+		left:0px;
+		-webkit-transform:scale(0.5, 1);
+	}
+}
+
+@-moz-keyframes bounce_escapingBallG{
+	0%{
+		left:0px;
+		-moz-transform:scale(0.5, 1);
+	}
+
+	25%{
+		left:31px;
+		-moz-transform:scale(1, 0.5);
+	}
+
+	50%{
+		left:79px;
+		-moz-transform:scale(0.5, 1);
+	}
+
+	75%{
+		left:31px;
+		-moz-transform:scale(1, 0.5);
+	}
+
+	100%{
+		left:0px;
+		-moz-transform:scale(0.5, 1);
+	}
+}
