--- a/src/main/resources/static/views/cluster-viz.html
+++ b/src/main/resources/static/views/cluster-viz.html
@@ -4,3 +4,65 @@
 
 <div class="alert alert-info" ng-show="loading">Loading ...</div>
 <div id="dataviz-container"></div>
+
+<div class="panel panel-default" ng-show="jmxEnabled">
+	<div class="panel-heading">
+		<h4>Metrics</h4>
+	</div>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Rate</th>
+				<th>Mean</th>
+				<th>1&nbsp;min</th>
+				<th>5&nbsp;min</th>
+				<th>15&nbsp;min</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Messages in /sec</td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+			<tr>
+
+				<td>Bytes in /sec</td>
+				<td><span class="badge">1.64</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+			<tr>
+				<td>Bytes out /sec</td>
+				<td><span class="badge">1.64</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+			<tr>
+				<td>Bytes rejected /sec</td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+			<tr>
+				<td>Failed fetch request /sec</td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+			<tr>
+				<td>Failed produce request /sec</td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+				<td><span class="badge">0.00</span></td>
+			<tr>
+		</tbody>
+	</table>
+</div>
