add JMX metric - BrokerTopicMetrics

--- a/src/main/resources/static/views/setting.html
+++ b/src/main/resources/static/views/setting.html
@@ -34,7 +34,7 @@
 	<h3>Elasticsearch</h3>
 	<div class="form-group">
 		<label for="inputAPIType">API Type</label> <select
-			class="form-control" ng-model="apiType">
+			class="form-control" ng-model="settingForm.apiType">
 			<option ng-repeat="x in apiTypes">{{x}}</option>
 		</select>
 	</div>
