jmx metrics line chart

--- a/src/main/resources/static/views/cluster-viz.html
+++ b/src/main/resources/static/views/cluster-viz.html
@@ -153,6 +153,9 @@
 	</div>
 </div> -->
 
+
+<div id="metrics" style="height: 400px; min-width: 340px"></div>
+
 <div class="alert alert-info" role="alert" ng-hide="jmxEnabled">
 	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 	<span class="sr-only">Info:</span> JMX is not avialable
